[tool.poetry]
name = "retinal-segmentation"
version = "0.1.0"
description = ""
authors = ["Rajdeep Ghosh <007rajdeepghosh@gmail.com>"]
readme = "README.md"
packages = [{include = "retinal_segmentation"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.0"
opencv-python = "^4.7.0.72"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
tqdm = "^4.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
